# Varint-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js
implementors/varint/: trait.VarintReader.js
io_operations/: index.html
io_operations/reader/: index.html  trait.Reader.html
io_operations/writer/: index.html  trait.Writer.html
src/: iooperations.rs  lib.rs  rawio.rs  zigzag.rs
src/io_operations/: lib.rs.html  reader.rs.html  writer.rs.html
src/varint/: iooperations.rs.html  lib.rs.html  rawio.rs.html  zigzag.rs.html
varint/: constant.VARINT_32_MAX_BYTES.html  constant.VARINT_64_MAX_BYTES.html  index.html  sidebar-items.js  trait.VarintRead.html  trait.VarintReader.html  trait.VarintWrite.html  trait.VarintWriter.html  trait.ZigZag.html
varint/iooperations/: sidebar-items.js  trait.VarintReader.html  trait.VarintWriter.html
varint/rawio/: sidebar-items.js  trait.VarintRead.html  trait.VarintWrite.html
varint/zigzag/: sidebar-items.js  trait.ZigZag.html
