[package]
name = "varint"
version = "0.1.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]
description = "A Rust implementation of Google Protobuf's Variable-Length Integers"

repository = "https://github.com/Techern/Varint-rs"
documentation = "http://techern.github.io/Varint-rs"
readme = "README.md"
keywords = ["Protobuf", "Google", "Varint"]
license = "MIT"