[package]
name = "varint"
version = "0.9.0-dev"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]
description = "A Rust implementation of Google Protobuf's Variable-Length Integers"

repository = "https://github.com/Techern/Varint-rs"
documentation = "http://techern.github.io/Varint-rs"
readme = "README.md"
keywords = ["Protobuf", "Google", "Varint"]
license = "MIT"

[dependencies]
bit_utils = "0.1.0"
io_operations = "0.1.0" #TODO: Feature flag this in 2.0, and add support for other stream utilities

[features]
nightly = []
