[package]
name = "varint"
version = "0.9.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]
description = "A Rust implementation of Google Protobuf's Variable-Length Integers"

repository = "https://github.com/Techern/Varint-rs"
documentation = "http://techern.github.io/Varint-rs"
readme = "README.md"
keywords = ["Protobuf", "Google", "Varint"]
license = "MIT OR Apache-2.0"

[dependencies]
bit_utils = "0.1.0"
io_operations = { version = "0.2.0", optional = true }

[features]
nightly = []
io-operations = [ "io_operations" ]
